--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "pragmarx/countries": "^0.5.8",
+        "santigarcor/laratrust": "5.0.*",
+        "webpatser/laravel-countries": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
